# ferris-backend

./: .env  Cargo.toml  backend.yaml  cliff.toml  deny.toml
fixtures/: decoding.pem  encoding.pem  test.sql
migrations/: 20250405134112_init.sql
src/: lib.rs
src/config/: app_config.rs  mod.rs  status_code.rs
src/error/: app_error.rs
src/model/: user.rs
src/utils/: jwt.rs  mod.rs  password.rs  result.rs
